# TDCtoKML

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  pyproject.toml  tdctokml.py
.github/: dependabot.yml
.github/workflows/: linting.yml  linting_and_testing.yml  pylint.yml
tdctokml/: __init__.py  tdctokml.py
tests/: __init__.py  test_tdctokml.py
