[tool.poetry]
name = "tdctokml"
version = "0.1.0"
description = "Tool to convert TDC Wholesale DSL net data excel to KML"
authors = ["Mikkel Mondrup Kristensen <mikkel.kristensen@bit-mover.net>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
pyproj = "3.3.1"
simplekml = "1.3.6"
pandas = "1.4.4"
openpyxl = "3.0.10"

[tool.poetry.dev-dependencies]
pylint = "2.15.2"
black = "22.8.0"
flake8 = "5.0.4"
pydocstyle = "6.1.1"
isort = "5.10.1"
bandit = "1.7.4"
mypy = "0.982"
pytest = "7.1.3"

[tool.poetry.scripts]
tdctokml = "tdctokml.tdctokml:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
