[tool.poetry]
name = "tdctokml"
version = "0.1.0"
description = "Tool to convert TDC Wholesale DSL net data excel to KML"
authors = ["Mikkel Mondrup Kristensen <mikkel.kristensen@bit-mover.net>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
pyproj = "3.4.1"
simplekml = "1.3.6"
pandas = "1.5.3"
openpyxl = "3.1.2"

[tool.poetry.dev-dependencies]
pylint = "2.17.0"
black = "23.3.0"
flake8 = "6.0.0"
pydocstyle = "6.3.0"
isort = "5.12.0"
bandit = "1.7.5"
mypy = "1.1.1"
pytest = "7.2.2"

[tool.poetry.scripts]
tdctokml = "tdctokml.tdctokml:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
